exports_files([
    "ksp/KSP_Data/Managed/Assembly-CSharp.dll",
    "ksp/KSP_Data/Managed/Assembly-CSharp-firstpass.dll",
    "ksp/KSP_Data/Managed/UnityEngine.dll",
    "ksp/KSP_Data/Managed/UnityEngine.AssetBundleModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.AnimationModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.CoreModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.IMGUIModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.InputLegacyModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.PhysicsModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.SharedInternalsModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.TextRenderingModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.UI.dll",
    "ksp/KSP_Data/Managed/UnityEngine.UIModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll",
    "ksp/KSP_Data/Managed/UnityEngine.ScreenCaptureModule.dll",
])
