load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//:config.bzl", "cmake_version", "version")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/build:cpp.bzl", "cpp_check_test", "cpp_lint_test")
load("//tools/build:pkg.bzl", "pkg_zip")
load("//tools/build/protobuf:nanopb.bzl", "protobuf_nanopb")
load("//tools/krpctools:clientgen.bzl", "clientgen_cnano")

name = "krpc-cnano-%s" % version

pkg_zip(
    name = "cnano",
    out = "%s.zip" % name,
    files = glob([
        "include/**/*.h",
        "src/*.c",
        "cmake/*.cmake.in",
    ]) + [
        "CHANGES.txt",
        "INSTALL.txt",
        "LICENSE",
        ":cmake",
        ":services-dockingcamera",
        ":services-drawing",
        ":services-infernalrobotics",
        ":services-kerbalalarmclock",
        ":services-krpc",
        ":services-lidar",
        ":services-remotetech",
        ":services-spacecenter",
        ":services-ui",
        "//:COPYING",
        "//:COPYING.LESSER",
        "//:readme",
        "//:version",
        "//protobuf:krpc.proto",
        "src/krpc.options",
    ],
    path_map = {
        "client/cnano/": "%s/" % name,
        "client/cnano/src/krpc.options": "%s/protobuf/krpc.options" % name,
        "COPYING": "%s/COPYING" % name,
        "COPYING.LESSER": "%s/COPYING.LESSER" % name,
        "README.txt": "%s/README.txt" % name,
        "VERSION.txt": "%s/VERSION.txt" % name,
        "protobuf/": "%s/protobuf/" % name,
    },
    visibility = ["//:__pkg__"],
)

genrule(
    name = "cmake",
    srcs = ["CMakeLists.txt.tmpl"],
    outs = ["CMakeLists.txt"],
    cmd = "sed 's/%VERSION%/" + cmake_version + '/g\' "$<" > "$@"',
)

clientgen_cnano(
    name = "services-krpc",
    out = "include/krpc_cnano/services/krpc.h",
    defs = "//core:ServiceDefinitions",
    service = "KRPC",
)

clientgen_cnano(
    name = "services-spacecenter",
    out = "include/krpc_cnano/services/space_center.h",
    defs = "//service/SpaceCenter:ServiceDefinitions",
    service = "SpaceCenter",
)

clientgen_cnano(
    name = "services-drawing",
    out = "include/krpc_cnano/services/drawing.h",
    defs = "//service/Drawing:ServiceDefinitions",
    service = "Drawing",
)

clientgen_cnano(
    name = "services-infernalrobotics",
    out = "include/krpc_cnano/services/infernal_robotics.h",
    defs = "//service/InfernalRobotics:ServiceDefinitions",
    service = "InfernalRobotics",
)

clientgen_cnano(
    name = "services-kerbalalarmclock",
    out = "include/krpc_cnano/services/kerbal_alarm_clock.h",
    defs = "//service/KerbalAlarmClock:ServiceDefinitions",
    service = "KerbalAlarmClock",
)

clientgen_cnano(
    name = "services-remotetech",
    out = "include/krpc_cnano/services/remote_tech.h",
    defs = "//service/RemoteTech:ServiceDefinitions",
    service = "RemoteTech",
)

clientgen_cnano(
    name = "services-ui",
    out = "include/krpc_cnano/services/ui.h",
    defs = "//service/UI:ServiceDefinitions",
    service = "UI",
)

clientgen_cnano(
    name = "services-lidar",
    out = "include/krpc_cnano/services/lidar.h",
    defs = "//service/LiDAR:ServiceDefinitions",
    service = "LiDAR",
)

clientgen_cnano(
    name = "services-dockingcamera",
    out = "include/krpc_cnano/services/dockingcamera.h",
    defs = "//service/DockingCamera:ServiceDefinitions",
    service = "DockingCamera",
)

clientgen_cnano(
    name = "services-test-service",
    out = "test/services/test_service.h",
    defs = "//tools/TestServer:ServiceDefinitions",
    service = "TestService",
)

srcs = glob(["src/**/*.c"])

hdrs = glob(["include/**/*.h"]) + [
    ":services-krpc",
    ":services-spacecenter",
    ":services-drawing",
    ":services-infernalrobotics",
    ":services-kerbalalarmclock",
    ":services-remotetech",
    ":services-ui",
    ":services-lidar",
    ":services-dockingcamera",
]

cc_library(
    name = "krpc_cnano",
    srcs = srcs + [":protobuf"],
    hdrs = hdrs + [":protobuf"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["@c_nanopb//:nanopb"],
)

test_suite(
    name = "test",
    tests = [
        ":check",
        ":client",
        ":lint",
    ],
)

client_test(
    name = "client",
    size = "small",
    server_executable = "//tools/TestServer",
    server_type = "serialio",
    tags = [
        "local",
        "requires-network",
    ],
    test_executable = ":cnanotest",
)

test_srcs = glob([
    "test/test_*.cpp",
    "test/*.hpp",
]) + [":services-test-service"]

cc_binary(
    name = "cnanotest",
    srcs = test_srcs,
    includes = ["test"],
    deps = [
        ":krpc_cnano",
        "@cpp_googletest//:gmock",
        "@cpp_googletest//:gtest",
    ],
)

cpp_check_test(
    name = "check",
    size = "small",
    srcs = srcs + test_srcs,
    hdrs = hdrs,
    includes = ["include"],
)

cpp_lint_test(
    name = "lint",
    size = "small",
    srcs = srcs + test_srcs,
    hdrs = hdrs,
    extra_files = [
        "include/krpc_cnano/services/CPPLINT.cfg",
        "test/services/CPPLINT.cfg",
    ],
    filters = [
        "+build/include_alpha",
        "-legal/copyright",
        "-readability/todo",
        "-readability/casting",
        "-build/header_guard",
        "-build/include_subdir",
    ],
    includes = ["include"],
)

#TODO: use targets in //protobuf:... instead of the following
protobuf_nanopb(
    name = "protobuf",
    src = "//protobuf:krpc.proto",
    include = "krpc_cnano",
    header = "include/krpc_cnano/krpc.pb.h",
    options = "src/krpc.options",
    source = "src/krpc.pb.c",
)

exports_files(["src/krpc.options"])
