load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("//:config.bzl", "cmake_version", "version")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/build:cog.bzl", "cog_test")
load("//tools/build:cpp.bzl", "clang_format_test", "clang_tidy_test")
load("//tools/build:pkg.bzl", "pkg_zip")
load("//tools/build/protobuf:nanopb.bzl", "protobuf_nanopb")
load("//tools/krpctools:clientgen.bzl", "clientgen_cnano")

name = "krpc-cnano-%s" % version

pkg_zip(
    name = "cnano",
    out = "%s.zip" % name,
    files = glob([
        "include/**/*.h",
        "src/*.c",
        "cmake/*.cmake.in",
    ]) + [
        "CHANGELOG.md",
        "INSTALL.txt",
        "LICENSE",
        "README.txt",
        "src/krpc.options",
        ":cmake",
        ":protobuf",
        ":services-dockingcamera",
        ":services-drawing",
        ":services-infernalrobotics",
        ":services-kerbalalarmclock",
        ":services-krpc",
        ":services-lidar",
        ":services-remotetech",
        ":services-spacecenter",
        ":services-ui",
        "//:COPYING",
        "//:COPYING.LESSER",
        "//:version",
        "//protobuf:krpc.proto",
    ],
    path_map = {
        "client/cnano/": "%s/" % name,
        "client/cnano/src/krpc.options": "%s/protobuf/krpc.options" % name,
        "COPYING": "%s/COPYING" % name,
        "COPYING.LESSER": "%s/COPYING.LESSER" % name,
        "VERSION.txt": "%s/VERSION.txt" % name,
        "protobuf/": "%s/protobuf/" % name,
    },
    visibility = ["//:__pkg__"],
)

genrule(
    name = "cmake",
    srcs = ["CMakeLists.txt.tmpl"],
    outs = ["CMakeLists.txt"],
    cmd = "sed 's/%VERSION%/" + cmake_version + '/g\' "$<" > "$@"',
)

clientgen_cnano(
    name = "services-krpc",
    out = "include/krpc_cnano/services/krpc.h",
    defs = "//core:ServiceDefinitions",
    service = "KRPC",
)

clientgen_cnano(
    name = "services-spacecenter",
    out = "include/krpc_cnano/services/space_center.h",
    defs = "//service/SpaceCenter:ServiceDefinitions",
    service = "SpaceCenter",
)

clientgen_cnano(
    name = "services-drawing",
    out = "include/krpc_cnano/services/drawing.h",
    defs = "//service/Drawing:ServiceDefinitions",
    service = "Drawing",
)

clientgen_cnano(
    name = "services-infernalrobotics",
    out = "include/krpc_cnano/services/infernal_robotics.h",
    defs = "//service/InfernalRobotics:ServiceDefinitions",
    service = "InfernalRobotics",
)

clientgen_cnano(
    name = "services-kerbalalarmclock",
    out = "include/krpc_cnano/services/kerbal_alarm_clock.h",
    defs = "//service/KerbalAlarmClock:ServiceDefinitions",
    service = "KerbalAlarmClock",
)

clientgen_cnano(
    name = "services-remotetech",
    out = "include/krpc_cnano/services/remote_tech.h",
    defs = "//service/RemoteTech:ServiceDefinitions",
    service = "RemoteTech",
)

clientgen_cnano(
    name = "services-ui",
    out = "include/krpc_cnano/services/ui.h",
    defs = "//service/UI:ServiceDefinitions",
    service = "UI",
)

clientgen_cnano(
    name = "services-lidar",
    out = "include/krpc_cnano/services/lidar.h",
    defs = "//service/LiDAR:ServiceDefinitions",
    service = "LiDAR",
)

clientgen_cnano(
    name = "services-dockingcamera",
    out = "include/krpc_cnano/services/dockingcamera.h",
    defs = "//service/DockingCamera:ServiceDefinitions",
    service = "DockingCamera",
)

clientgen_cnano(
    name = "services-test-service",
    out = "test/services/test_service.h",
    defs = "//tools/TestServer:ServiceDefinitions",
    service = "TestService",
)

srcs = glob(["src/**/*.c"])

hdrs = glob(["include/**/*.h"]) + [
    ":services-krpc",
    ":services-spacecenter",
    ":services-drawing",
    ":services-infernalrobotics",
    ":services-kerbalalarmclock",
    ":services-remotetech",
    ":services-ui",
    ":services-lidar",
    ":services-dockingcamera",
]

cc_library(
    name = "krpc_cnano",
    srcs = srcs + [":protobuf"],
    hdrs = hdrs + [":protobuf"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["@c_nanopb//:nanopb"],
)

test_suite(
    name = "test",
    tests = [
        ":arduino",
        ":client",
        ":cog",
        ":lint",
    ],
)

# The encoder and decoder sources contain cog generator blocks whose expansion is
# committed to the tree; this checks it was regenerated after any edit to them.
cog_test(
    name = "cog",
    size = "small",
    srcs = [
        "include/krpc_cnano/decoder.h",
        "include/krpc_cnano/encoder.h",
        "src/decoder.c",
        "src/encoder.c",
    ],
)

# Builds the Arduino communication backend for the host, against a stand-in for the Arduino
# HardwareSerial class, so it can be tested without hardware. It deliberately does not depend
# on krpc_cnano, whose copy of communication.c is built for the host platform instead and
# defines the same functions.
cc_test(
    name = "arduino",
    size = "small",
    srcs = [
        "include/krpc_cnano/communication.h",
        "include/krpc_cnano/error.h",
        "src/communication.c",
        "test/arduino/HardwareSerial.h",
        "test/arduino/test_communication_arduino.cpp",
    ],
    copts = ["-xc++"],
    includes = [
        "include",
        "test/arduino",
    ],
    local_defines = ["ARDUINO"],
    deps = ["@cpp_googletest//:gtest"],
)

client_test(
    name = "client",
    size = "small",
    server_executable = "//tools/TestServer",
    server_type = "serialio",
    tags = [
        "local",
        "requires-network",
    ],
    test_executable = ":cnanotest",
)

test_srcs = glob([
    "test/test_*.cpp",
    "test/*.hpp",
]) + [":services-test-service"]

# The tests are built with server error messages enabled, so that they cover decoding them. The
# default build, with them disabled, is covered by the krpc_cnano library itself.
cc_library(
    name = "krpc_cnano_error_messages",
    testonly = True,
    srcs = srcs + [":protobuf"],
    hdrs = hdrs + [":protobuf"],
    defines = ["KRPC_ERROR_MESSAGES"],
    includes = ["include"],
    deps = ["@c_nanopb//:nanopb"],
)

cc_binary(
    name = "cnanotest",
    testonly = True,
    srcs = test_srcs,
    includes = ["test"],
    deps = [
        ":krpc_cnano_error_messages",
        "@cpp_googletest//:gmock",
        "@cpp_googletest//:gtest",
    ],
)

test_suite(
    name = "lint",
    tests = [
        ":clangformat",
        ":clangtidy",
    ],
)

clang_tidy_test(
    name = "clangtidy",
    size = "large",
    srcs = srcs,
    copts = ["-std=c99"],
    deps = [":krpc_cnano"],
)

clang_format_test(
    name = "clangformat",
    size = "small",
    srcs = glob([
        "src/*.c",
        "include/**/*.h",
        "test/**/*.cpp",
        "test/**/*.hpp",
    ]),
)

#TODO: use targets in //protobuf:... instead of the following
protobuf_nanopb(
    name = "protobuf",
    src = "//protobuf:krpc.proto",
    include = "krpc_cnano",
    header = "include/krpc_cnano/krpc.pb.h",
    options = "src/krpc.options",
    source = "src/krpc.pb.c",
)

exports_files([
    "CHANGELOG.md",
    "src/krpc.options",
])
